src/App.css
:root {
  --dark-gray-100: #282c34;
  --dark-gray-75: #3a3d42;
  --dark-gray-50: #525458;
  --light-gray-100: #3a4355;
  --light-gray-75: #4c576d;
}

.App {
  text-align: center;
}

.App-header {
  background-color: var(--dark-gray-100);
  min-height: 5vh;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  color: white;
}

.App-header-title {
  cursor: pointer;
}

.header-tabs-container {
  display: flex;
  min-height: 10vh;
}

.header-tab {
  min-height: 5vh;
  min-width: 15%;
  margin: 0;
  padding: 15px;
  display: flex;
  align-items: center;
  cursor: pointer;
  font-size: calc(15px + 1vmin);
}

.header-tab-selected,
.header-tab:hover {
  background-color: var(--dark-gray-75);
}

.App-subheader {
  background-color: var(--light-gray-100);
  min-height: 4vh;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  color: white;
}

.App-subheader-title {
  cursor: pointer;
}

.subheader-tabs-container {
  display: flex;
  min-height: 6vh;
}

.subheader-tab {
  min-height: 5vh;
  min-width: 15%;
  margin: 0;
  padding: 15px;
  align-items: center;
  cursor: pointer;
  font-size: calc(15px + 1vmin);
}

.subheader-tab-selected,
.subheader-tab:hover {
  background-color: var(--light-gray-75);
}

.input-with-label {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  max-width: 600px;
  align-self: center;
  padding-top: 15px;
}

.inputs-container {
  width: 100%;
  justify-content: center;
  display: flex;
  flex-direction: column;
}

.input-label {
  min-width: 300px;
  text-align: initial;
}

.input-box-container {
  display: flex;
  align-items: center;
}

.input-box {
  border-radius: 5px;
  min-height: 20px;
}

.submit-button {
  min-width: 120px;
  min-height: 40px;
  border-radius: 20px;
  background-color: var(--dark-gray-75);
  color: white;
  font-size: larger;
  cursor: pointer;
  margin: 20px;
}

.submit-button:hover {
  background-color: var(--dark-gray-100);
}

.pools,
.schedule {
  margin: 10px 0;
}

.collapsible {
  background-color: var(--dark-gray-50);
  color: white;
  cursor: pointer;
  padding: 0 50px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 15px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 2px;
}

.active,
.collapsible:hover {
  background-color: var(--dark-gray-75);
}

.content {
  background-color: rgb(241, 241, 243);
}

.collapsible-content-row {
  display: flex;
  flex-direction: row;
  padding: 0 50px;
}

.collapsible-content-row-cell {
  min-width: 125px;
  text-align: center;
}

@media only screen and (max-width: 600px) {
  .collapsible-content-row-cell {
    min-width: 50px;
  }

  .collapsible-content-row {
    padding: 0 10px;
  }

  .inputs-container {
    overflow: scroll;
  }

  .input-with-label {
    flex-direction: column;
  }

  .input-label {
    width: 100%;
    text-align: center;
  }

  .input-box-container {
    width: 100%;
    align-items: center;
    justify-content: center;
  }
}

